Fixed layout issues in tasks-overview and compiler-task component and added new styles

--- a/angularApp/src/app/app.component.sass
+++ b/angularApp/src/app/app.component.sass
@@ -1,3 +1,6 @@
+.row
+  display: flex
+
 .navbar
   display: flex
   justify-content: space-between
@@ -6,7 +9,7 @@
   background-color: #cce7e8
   height: 40px
   width: 100%
-  position: fixed
+  //position: fixed
   top: 0
   left: 0
   z-index: 10
@@ -15,7 +18,7 @@
   .nav-left
     display: flex
     align-items: center
-    gap: 20px // Abstand zwischen Benutzername und Buttons
+    gap: 180px // Abstand zwischen Benutzername und Buttons
 
     .user-name
       h1
@@ -61,7 +64,7 @@
       border: none
       font-size: 1rem
       cursor: pointer
-      padding: 10px 20px 
+      padding: 10px 20px
       border-radius: 5px
       transition: background-color 0.3s, color 0.3s
 
@@ -78,8 +81,9 @@
         font-size: 1.2rem // Icon-Größe
 
 .sidebar
-  position: fixed // Fixiere die Sidebar am linken Rand
+  // position: fixed // Fixiere die Sidebar am linken Rand
   top: 70px // Unterhalb der Navbar (Navbar-Höhe: 60px)
+  margin-top: 10px // Abstand von der Navbar
   left: 0
   width: 220px
   background-color: #cce7e8
@@ -91,13 +95,13 @@
   h2
     font-size: 1.2rem
     font-weight: bold
-    margin-bottom: 8px
+    margin-bottom: 5px
     color: #333
 
   select
     width: 100%
     padding: 8px
-    margin-bottom: 20px // Abstand zwischen Dropdowns
+    margin-bottom: 50px // Abstand zwischen Dropdowns
     border: 1px solid #ccc
     border-radius: 5px
     font-size: 0.9rem
