--- a/angularApp/src/app/tasks-overview/tasks-overview.component.sass
+++ b/angularApp/src/app/tasks-overview/tasks-overview.component.sass
@@ -2,18 +2,29 @@
   padding: 20px
   background-color: #000 // Schwarzer Hintergrund
   color: #fff
-
-  h1
-    font-size: 2rem
-    margin-bottom: 20px
+  margin-left: 10px
+  margin-top: 10px
+  border-radius: 5px
 
   .task-grid
     display: grid
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr))
+    grid-template-columns: repeat(3, 1fr) // Drei Spalten
     gap: 20px
 
+    h2
+      font-size: 1.4rem
+      margin-bottom: 10px
+      text-align: center
+      color: #000
+
+    .task-column
+    background-color: #fff
+    border-radius: 10px
+    padding: 20px
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)
+
     .task-card
-      background-color: #fff
+      background-color:  #cce7e8
       color: #000
       border-radius: 10px
       padding: 20px
@@ -37,7 +48,7 @@
             background-color: #489a9a
 
     .add-task-card
-      background-color: #fff
+      background-color:  #cce7e8
       color: #000
       border-radius: 10px
       padding: 20px
@@ -50,6 +61,7 @@
 
       h1
         font-size: 2rem
+        color: #fff 
 
       &:hover
         background-color: #f0f0f0
