--- a/angularApp/src/styles.sass
+++ b/angularApp/src/styles.sass
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+* 
+  font-family: 'Arial', sans-serif
+  font-size: 1rem // Standardgröße
+  font-weight: normal // Normalgewicht
+  color: #000 // Schwarz als Standardfarbe
+
+body 
+  font-family: 'Arial', sans-serif
+  font-size: 1rem
+  font-weight: normal
+  color: #000
+
+
